@@ -36,7 +36,7 @@ of specified log entries.
 <a href="#klog">The socklog-klog service</a><br>
 <a href="#ucspi-tcp">The socklog-ucspi-tcp service</a><br>
 <a href="#notify">The socklog-notify service</a><br><br>
-<a href="https://cr.yp.to/daemontools/faq/create.html#remove">
+<a href="https://smarden.org/runit/faq.html#remove">
 Removing socklog services</a>
 <hr>
 
@@ -70,9 +70,10 @@ directories, e.g.:
 <pre>
   # less /var/log/socklog/main/current
 </pre>
-Optionally configure the <i>socklog-unix</i> service by
-<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
-the corresponding <tt>run</tt> scripts and <tt>config</tt> files:
+Optionally configure the <i>socklog-unix</i> service by editing
+the corresponding <tt>run</tt> scripts and <tt>config</tt> files and
+<a href="https://smarden.org/runit/faq.html#control">restarting</a> the
+service:
 <ul>
   <li>/var/service/socklog-unix/run
   <li>/var/service/socklog-unix/log/run
@@ -110,9 +111,10 @@ directory:
 <pre>
   # less /var/log/socklog-inet/main/current
 </pre>
-Optionally configure the <i>socklog-inet</i> service by
-<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
-the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
+Optionally configure the <i>socklog-inet</i> service by editing
+the corresponding <tt>run</tt> scripts and <tt>config</tt> file and
+<a href="https://smarden.org/runit/faq.html#control">restarting</a> the
+service:
 <ul>
   <li>/var/service/socklog-inet/run
   <li>/var/service/socklog-inet/log/run
@@ -150,9 +152,10 @@ directory:
 <pre>
   # less /var/log/socklog-klog/main/current
 </pre>
-Optionally configure the <i>socklog-klog</i> service by
-<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
-the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
+Optionally configure the <i>socklog-klog</i> service by editing
+the corresponding <tt>run</tt> scripts and <tt>config</tt> file and
+<a href="https://smarden.org/runit/faq.html#control">restarting</a> the
+service:
 <ul>
   <li>/var/service/socklog-klog/run
   <li>/var/service/socklog-klog/log/run
@@ -188,9 +191,10 @@ directory:
 <pre>
   # less /var/log/socklog-ucspi-tcp/main/current
 </pre>
-Optionally configure the <i>socklog-ucspi-tcp</i> service by
-<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
-the corresponding <tt>run</tt> scripts and <tt>config</tt> file:
+Optionally configure the <i>socklog-ucspi-tcp</i> service by editing
+the corresponding <tt>run</tt> scripts and <tt>config</tt> file and
+<a href="https://smarden.org/runit/faq.html#control">restarting</a> the
+service:
 <ul>
   <li>/var/service/socklog-ucspi-tcp/run
   <li>/var/service/socklog-ucspi-tcp/log/run
@@ -225,9 +229,10 @@ Wait five seconds for the service to start, you can test the service with:
 <pre>
   # echo test | tai64n > /var/log/socklog/.notify
 </pre>
-Optionally configure the <i>socklog-notify</i> service by
-<a href="https://cr.yp.to/daemontools/faq/create.html#upgrade">editing</a>
-the corresponding <tt>run</tt> script:
+Optionally configure the <i>socklog-notify</i> service by editing
+the corresponding <tt>run</tt> script and
+<a href="https://smarden.org/runit/faq.html#control">restarting</a> the
+service:
 <ul>
   <li>/var/service/socklog-notify/run
 </ul>
